argocd/app-configs/argo-events/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-events
  namespace: argo-events
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wh-events.fzymgc.house`) && PathPrefix(`/github-event`)
      kind: Rule
      services:
        - name: github-eventsource-svc
          port: 12000
    - match: Host(`argo-events.fzymgc.house`) && PathPrefix(`/github-event`)
      kind: Rule
      services:
        - name: github-eventsource-svc
          port: 12000
    - match: Host(`argoevents.fzymgc.house`) && PathPrefix(`/github-event`)
      kind: Rule
      services:
        - name: github-eventsource-svc
          port: 12000
  tls:
    secretName: argo-events-tls
